Fix arrow style and collapses width

--- a/kasa/src/components/Gallery/Gallery.module.scss
+++ b/kasa/src/components/Gallery/Gallery.module.scss
@@ -1,5 +1,6 @@
 .bannerContainer {
     margin-top: 50px;
+    margin-bottom: 170px;
 }
 
 .banner {
@@ -7,4 +8,12 @@
     width: 100%;
     height: 400px;
     object-fit: cover;
+}
+
+.arrows {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 25px;
+    margin-top: -250px;
 }
