--- a/kasa/src/components/Header/Header.module.scss
+++ b/kasa/src/components/Header/Header.module.scss
@@ -11,7 +11,7 @@ a, a:visited, ul {
     font-weight: 500;
 }
 
-.homeLink, .aboutLink {
+.link {
     font-size: 20px;
 }
 
