--- a/kasa/src/pages/Fiche-Logement/Fiche-Logement.module.scss
+++ b/kasa/src/pages/Fiche-Logement/Fiche-Logement.module.scss
@@ -58,6 +58,9 @@
     gap: 50px;
     display: flex;
     justify-content: space-between;
+    > div {
+        width: 50%;
+    }
 }
 
 .value {
